# BotShepherd

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: __main__.py
app/commands/: auth_manager.py  base_command.py  command_handler.py
app/commands/builtin_commands/: auth_command.py  control_command.py
app/config/: config_manager.py  config_validator.py
app/database/: models.py
app/sakoya/: __init__.py  models.py
app/server/: message_processor.py  proxy_server.py  sakoya_adapter.py  unified_http_ws_server.py  unified_proxy_server.py
app/utils/: __init__.py  logger.py  security_utils.py
app/web_api/: web_server.py
templates/: accounts.html  base.html  connections.html  login.html  settings.html
