[project]
name = "botshepherd"
version = "0.5.3"
description = "星星花与牧羊人 - 多框架统一管理平台"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=2.0.0",
    "aiosqlite>=0.19.0",
    "waitress>=2.1.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "psutil>=5.0.0",
    "requests>=2.0.0",
    "pyzipper>=0.3.0",
    "msgspec>=0.20.0",
]

[project.scripts]
bs = "app.__main__:_cli_entrypoint"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["**/*.json", "**/*.txt"]

[tool.uv]
package = true
